# datariot

./: .gitignore  CHANGELOG  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
datariot/: __init__.py
datariot/__spi__/: __init__.py  const.py  error.py  proto.py  splitter.py  type.py
datariot/__util__/: array_util.py  geometric_util.py  io_util.py  text_util.py
datariot/extractor/: keyword_extractor.py  title_extractor.py  topic_extractor.py
datariot/parser/: __init__.py  __spi__.py
datariot/parser/csv/: __spi__.py  csv_formatter.py  csv_model.py  csv_parser.py
datariot/parser/docx/: __init__.py  __spi__.py  docx_formatter.py  docx_mixin.py  docx_model.py  docx_parser.py
datariot/parser/eml/: __spi__.py  eml_mixin.py  eml_model.py  eml_parser.py
datariot/parser/pdf/: __init__.py  __spi__.py  pdf_formatter.py  pdf_mixin.py  pdf_model.py  pdf_parser.py
datariot/parser/utils/: fonts.py
datariot/parser/web/: __init__.py  web_formatter.py  web_mixin.py  web_model.py  web_parser.py
datariot/parser/xlsx/: __spi__.py  (+3 more)
datariot/splitter/: __init__.py  html_header_text_splitter.py  html_tag_splitter.py  moving_window_splitter.py  recursive_character_splitter.py  recursive_character_text_splitter.py
datariot/util/: __init__.py  image_util.py  io_util.py  text_util.py
test/: test_suite.py
test/__asset__/: __init__.py
test/extractor/: keyword_extractor_test.py  title_extractor_test.py  topic_extractor_test.py
test/splitter/: html_tag_splitter_test.py  moving_window_splitter_test.py  recursive_character_text_splitter_test.py
(+14 files in other folders)
