[build-system]
requires = ["poetry-core>=1.0.0", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datariot"
version = "0.6.13"
description = "Advanced document parsing library"
authors = ["c7nw3r", ]

[tool.poetry.dependencies]
python = ">3.10.0"
tqdm = "4.66.4"
Pillow = "10.3.0"
pydantic = "^2.7.4"
python-docx = { version = "~1.1.2", optional = true }
pdfplumber = { version = "~0.10.3", optional = true }
pytesseract = { version = "~0.3.10", optional = true }
selenium = { version = "~4.17.2", optional = true }
beautifulsoup4 = { version = "~4.12.3", optional = true }
webdriver_manager = { version = "~4.0.1", optional = true }
lxml = { version = "~5.1.0", optional = true }
openpyxl = { version = "~3.1.2", optional = true }
camelot-py = { version = "~0.11.0", optional = true }
stopwordsiso = { version = "~0.6.1", optional = true}

[tool.poetry.extras]
docx = ["python-docx"]
pdf = ["pdfplumber"]
ocr = ["pytesseract"]
web = ["selenium", "beautifulsoup4", "webdriver_manager", "lxml"]
xlsx = ["openpyxl"]
camelot = ["camelot-py"]
stopwords = ["stopwordsiso"]

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "3.0.0"

[tool.ruff]
target-version = "py312"
select = ["B", "E", "F", "I", "W"]

[tool.ruff.isort]
lines-after-imports = 2
